// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CollapseEvent Component should display "ACTIVATE" for missing event type 1`] = `
<View
  style={
    {
      "borderBottomColor": "#D8D8E2",
      "borderBottomWidth": 1,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 14,
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.7}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        {
          "backgroundColor": "#DBE5FF",
          "borderRadius": 20,
          "color": "#2A2A3C",
          "fontWeight": "700",
          "padding": 5,
          "paddingHorizontal": 12,
        }
      }
    >
      ACTIVATE
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      Duration: 1609459200000
      ChevronDownIcon
    </View>
  </TouchableOpacity>
</View>
`;

exports[`CollapseEvent Component should format JSON content correctly 1`] = `
<View
  style={
    {
      "borderBottomColor": "#D8D8E2",
      "borderBottomWidth": 1,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 14,
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.7}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        {
          "backgroundColor": "#DBE5FF",
          "borderRadius": 20,
          "color": "#2A2A3C",
          "fontWeight": "700",
          "padding": 5,
          "paddingHorizontal": 12,
        }
      }
    >
      CUSTOM
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      Duration: 1609459200000
      ChevronDownIcon
    </View>
  </TouchableOpacity>
</View>
`;

exports[`CollapseEvent Component should handle empty hit object 1`] = `
<View
  style={
    {
      "borderBottomColor": "#D8D8E2",
      "borderBottomWidth": 1,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 14,
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.7}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        {
          "backgroundColor": "#DBE5FF",
          "borderRadius": 20,
          "color": "#2A2A3C",
          "fontWeight": "700",
          "padding": 5,
          "paddingHorizontal": 12,
        }
      }
    >
      ACTIVATE
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      Duration: NaN
      ChevronDownIcon
    </View>
  </TouchableOpacity>
</View>
`;

exports[`CollapseEvent Component should render collapsed by default — content not visible 1`] = `
<View
  style={
    {
      "borderBottomColor": "#D8D8E2",
      "borderBottomWidth": 1,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 14,
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.7}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        {
          "backgroundColor": "#DBE5FF",
          "borderRadius": 20,
          "color": "#2A2A3C",
          "fontWeight": "700",
          "padding": 5,
          "paddingHorizontal": 12,
        }
      }
    >
      CLICK
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      Duration: 1609459200000
      ChevronDownIcon
    </View>
  </TouchableOpacity>
</View>
`;

exports[`CollapseEvent Component should render event content when expanded 1`] = `
<View
  style={
    {
      "borderBottomColor": "#D8D8E2",
      "borderBottomWidth": 1,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 14,
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.7}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        {
          "backgroundColor": "#DBE5FF",
          "borderRadius": 20,
          "color": "#2A2A3C",
          "fontWeight": "700",
          "padding": 5,
          "paddingHorizontal": 12,
        }
      }
    >
      CONVERSION
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      Duration: 1609459200000
      ChevronUpIcon
    </View>
  </TouchableOpacity>
  <View
    style={
      {
        "backgroundColor": "#F3F3F7",
        "marginTop": 15,
        "paddingHorizontal": 15,
        "paddingVertical": 10,
      }
    }
  >
    <Text
      style={
        {
          "color": "#374151",
          "fontFamily": "monospace",
          "fontSize": 12,
          "lineHeight": 18,
        }
      }
    >
      "value": 100,
"currency": "USD"
    </Text>
  </View>
</View>
`;

exports[`CollapseEvent Component should render event with name and timestamp 1`] = `
<View
  style={
    {
      "borderBottomColor": "#D8D8E2",
      "borderBottomWidth": 1,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 14,
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.7}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        {
          "backgroundColor": "#DBE5FF",
          "borderRadius": 20,
          "color": "#2A2A3C",
          "fontWeight": "700",
          "padding": 5,
          "paddingHorizontal": 12,
        }
      }
    >
      PAGE_VIEW
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      Duration: 1609459200000
      ChevronDownIcon
    </View>
  </TouchableOpacity>
</View>
`;

exports[`CollapseEvent Component should toggle expand state on press (snapshot) 1`] = `
<View
  style={
    {
      "borderBottomColor": "#D8D8E2",
      "borderBottomWidth": 1,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 14,
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.7}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        {
          "backgroundColor": "#DBE5FF",
          "borderRadius": 20,
          "color": "#2A2A3C",
          "fontWeight": "700",
          "padding": 5,
          "paddingHorizontal": 12,
        }
      }
    >
      CLICK
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      Duration: 1609459200000
      ChevronDownIcon
    </View>
  </TouchableOpacity>
</View>
`;

exports[`CollapseEvent Component should toggle expand state on press (snapshot) 2`] = `
<View
  style={
    {
      "borderBottomColor": "#D8D8E2",
      "borderBottomWidth": 1,
      "justifyContent": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 14,
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.7}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        {
          "backgroundColor": "#DBE5FF",
          "borderRadius": 20,
          "color": "#2A2A3C",
          "fontWeight": "700",
          "padding": 5,
          "paddingHorizontal": 12,
        }
      }
    >
      CLICK
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      Duration: 1609459200000
      ChevronUpIcon
    </View>
  </TouchableOpacity>
  <View
    style={
      {
        "backgroundColor": "#F3F3F7",
        "marginTop": 15,
        "paddingHorizontal": 15,
        "paddingVertical": 10,
      }
    }
  >
    <Text
      style={
        {
          "color": "#374151",
          "fontFamily": "monospace",
          "fontSize": 12,
          "lineHeight": 18,
        }
      }
    >
      "target": "button"
    </Text>
  </View>
</View>
`;
